--- a/PiRob/app/src/main/res/layout/manuel_with_buttons.xml
+++ b/PiRob/app/src/main/res/layout/manuel_with_buttons.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     tools:context=".MainActivity">
+    <include layout="@layout/toolbar"/>
 
     <Button
         android:id="@+id/top"
