--- a/PiRob/app/src/main/res/layout/row.xml
+++ b/PiRob/app/src/main/res/layout/row.xml
@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
+            android:textColor="@android:color/black"
             android:text="Açıklama"
             android:textSize="12sp"
             android:textStyle="italic" />
