--- a/PiRob/app/src/main/res/layout/toolbar.xml
+++ b/PiRob/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,4 @@
 <androidx.appcompat.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
@@ -15,11 +14,11 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="150dp"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:text="@string/toolbar_title"
             android:textColor="@android:color/white"
-            android:textSize="20sp"
+            android:textSize="18dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
